@@ -33,6 +33,7 @@ Janus / brettflan (2010) - direct contributor to main project
 jcarter2014 (2014) - direct contributor to main project
 Jonathan Stickles / Jonathan S. Fox (2007-2014) - current maintainer of the game who revived the project and puts out official releases
 KA101 (2013) - contributed maps
+Kamal Sadek (2015) - Probably did something
 Kay12 (2011-2013) - contributed code and bug reports thru forums
 Kevin Sadler / sadler (2004) - did a lot of work on Tarn Adams' original version
 kuactet (2008) - direct contributor to main project
